# ai-trading-bot

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260408_0001_phase1_foundations.py  20260408_0002_phase3_backtest_reports.py  20260408_0003_phase5_agent_intelligence.py  20260408_0004_phase6_portfolio_risk.py  20260408_0005_phase7_execution_quality.py  20260410_0006_multi_profile_india_markets.py  20260412_0007_agent_memory.py
backend/data/india/: README.md  news.json
backend/data/india/bars/: RELIANCE_NSE.json
backend/scripts/: check_schema_drift.py
backend/src/tradingbot/: __init__.py  config.py  db.py  enums.py  models.py  security.py  utils.py
backend/tests/: test_committee.py  test_memory_service.py  test_phase10_control_plane.py  test_phase11_market_efficiency.py  test_phase1_runtime_validation.py  test_phase2_contracts.py  test_phase2_execution.py  test_phase3_backtest.py  test_phase4_data_depth.py  test_phase5_agent_intelligence.py  test_phase6_portfolio_risk.py  test_phase7_execution_quality.py  test_phase8_observability.py  test_phase9_adapter_contracts.py  test_phase9_api.py  test_phase9_payload_validation.py  test_phase9_portfolio_service.py  test_phase9_replay_e2e.py  test_phase9_worker_tasks.py  test_risk_engine.py  test_security.py  test_trading_profile.py
backend/tests/fixtures/: backtest_bars_aapl.json  backtest_expected_snapshot.json  backtest_news_aapl.json  replay_broker_fills.json
docs/: api.md  dashboard.md  (+13 more)
(+81 files in other folders)
